--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=Egg-Store
 
-spring.security.user.password=123
+#spring.security.user.password=123
 
 server.servlet.session.cookie.same-site=strict
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/egg_store
+spring.datasource.username=root
+spring.datasource.password=
+
+#Hibernate configuration
+spring.jpa.hibernate.properties.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
